--- a/src/components/BarPlot.css
+++ b/src/components/BarPlot.css
@@ -1,11 +1,11 @@
 #chart-container {
     height: auto;
-    width: 100%;
+    width: 50%;
 }
 
 #chart-container2 {
     height: auto;
-    width: 100%;
+    width: 50%;
     margin: 5px;
 }
 
